--- a/src/Spark.Web.FubuMVC.Tests/Spark.Web.FubuMVC.Tests.csproj
+++ b/src/Spark.Web.FubuMVC.Tests/Spark.Web.FubuMVC.Tests.csproj
@@ -50,6 +50,9 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\lib\spark\Spark.dll</HintPath>
     </Reference>
+    <Reference Include="StructureMap">
+      <HintPath>..\..\lib\StructureMap\StructureMap.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
