--- a/src/Spark.Web.FubuMVC/Spark.Web.FubuMVC.csproj
+++ b/src/Spark.Web.FubuMVC/Spark.Web.FubuMVC.csproj
@@ -74,6 +74,7 @@
     </Compile>
     <Compile Include="Bootstrap\ActionAndViewMatchedBySparkViewDescriptors.cs" />
     <Compile Include="Bootstrap\SparkDefaultStructureMapRegistry.cs" />
+    <Compile Include="Configuration\SparkSettingsFactory.cs" />
     <Compile Include="Extensions\RegistryConfigurationExtensions.cs" />
     <Compile Include="ActionContext.cs" />
     <Compile Include="Bootstrap\SparkStructureMapApplication.cs" />
